# fyn

./: .gitignore  .pre-commit-config.yaml  404.html  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MANIFESTO.md  PIP_COMPATIBILITY.md  README.md  SECURITY.md  STYLE.md  _typos.toml  dist-workspace.toml  fv.schema.json  fyn.schema.json  index.html  llms.txt  mkdocs.yml  package-lock.json  package.json  pyproject.toml  ruff.toml  sitemap.xml
crates/fv-auth/: Cargo.toml  README.md
crates/fv-auth/src/: cache.rs  credentials.rs  index.rs  keyring.rs  middleware.rs  providers.rs  pyx.rs  realm.rs  service.rs  store.rs
crates/fv-bench/: Cargo.toml  README.md
crates/fv-bench/benches/: uv.rs
crates/fv-bin-install/: Cargo.toml  README.md
crates/fv-bin-install/src/: lib.rs
crates/fv-build/: Cargo.toml  README.md  pyproject.toml
crates/fv-build-backend/: Cargo.toml  README.md
crates/fv-build-backend/src/: lib.rs  metadata.rs  settings.rs  source_dist.rs  wheel.rs
crates/fv-build-frontend/: Cargo.toml  README.md
crates/fv-build-frontend/src/: error.rs  lib.rs  pipreqs.rs
crates/fv-build/python/uv_build/: __init__.py  __main__.py
crates/fv-build/src/: main.rs
crates/fv-cache/: Cargo.toml  README.md
crates/fv-cache/src/: by_timestamp.rs  cli.rs  lib.rs  wheel.rs
crates/fv-cli/: Cargo.toml  README.md  build.rs
crates/fv-cli/src/: compat.rs  lib.rs  options.rs  version.rs
crates/fv-client/: Cargo.toml  README.md
crates/fv-client/src/: base_client.rs  cached_client.rs  error.rs  flat_index.rs  html.rs  middleware.rs  registry_client.rs  remote_metadata.rs  rkyvutil.rs
crates/fv-client/src/httpcache/: control.rs  mod.rs
crates/fv-client/tests/it/: http_util.rs  proxy.rs  remote_metadata.rs  ssl_certs.rs  user_agent_version.rs
crates/fv-configuration/: Cargo.toml  README.md
crates/fv-configuration/src/: authentication.rs  build_options.rs  constraints.rs  dependency_groups.rs  excludes.rs  export_format.rs  extras.rs  install_options.rs  name_specifiers.rs  overrides.rs  package_options.rs  project_build_backend.rs  proxy_url.rs  required_version.rs  sources.rs  target_triple.rs  threading.rs  vcs.rs
crates/fv-dirs/: Cargo.toml  README.md
crates/fv-dirs/src/: lib.rs
crates/fv-dispatch/: Cargo.toml  README.md
crates/fv-dispatch/src/: lib.rs
crates/fv-distribution/: Cargo.toml  README.md
crates/fv-distribution-filename/: Cargo.toml  README.md
crates/fv-distribution-filename/src/: build_tag.rs  egg.rs  expanded_tags.rs  lib.rs  source_dist.rs  wheel.rs  wheel_tag.rs
crates/fv-distribution-filename/src/snapshots/: uv_distribution_filename__wheel__tests__ok_build_tag.snap  uv_distribution_filename__wheel__tests__ok_multiple_tags.snap  uv_distribution_filename__wheel__tests__ok_single_tags.snap
crates/fv-distribution-types/: Cargo.toml  README.md
crates/fv-distribution-types/src/: annotation.rs  any.rs  build_info.rs  build_requires.rs  buildable.rs  cached.rs  config_settings.rs  dependency_metadata.rs  diagnostic.rs  dist_error.rs  error.rs  file.rs  hash.rs  id.rs  index.rs  index_name.rs  index_url.rs  installed.rs  known_platform.rs  lib.rs  prioritized_distribution.rs  requested.rs  requirement.rs  requires_python.rs  resolution.rs  resolved.rs  specified_requirement.rs  traits.rs
crates/fv-distribution/src/: archive.rs  distribution_database.rs  download.rs  error.rs  reporter.rs
crates/fv-distribution/src/index/: built_wheel_index.rs  cached_wheel.rs  registry_wheel_index.rs
crates/fv-distribution/src/metadata/: build_requires.rs  dependency_groups.rs  lowering.rs  mod.rs  requires_dist.rs
crates/fv-distribution/src/source/: built_wheel_metadata.rs  (+2 more)
crates/fv-extract/: Cargo.toml  README.md
crates/fv-extract/src/: hash.rs  lib.rs  stream.rs  sync.rs
crates/fv-git/: Cargo.toml  README.md
crates/fv-git-types/: Cargo.toml  README.md
crates/fv-git-types/src/: github.rs  lib.rs
crates/fv-git/src/: credentials.rs  git.rs  rate_limit.rs  resolver.rs  source.rs
crates/fv-install-wheel/: Cargo.toml  README.md
crates/fv-install-wheel/src/: install.rs  lib.rs  linker.rs  uninstall.rs  wheel.rs
crates/fv-installer/: Cargo.toml  README.md
crates/fv-installer/src/: compile.rs  installer.rs  plan.rs  preparer.rs  satisfies.rs  site_packages.rs  uninstall.rs
crates/fv-metadata/: Cargo.toml  README.md
crates/fv-metadata/src/: lib.rs
crates/fv-options-metadata/: Cargo.toml  README.md
crates/fv-options-metadata/src/: lib.rs
crates/fv-platform-tags/: Cargo.toml  README.md
crates/fv-platform-tags/src/: platform_tag.rs  tags.rs
crates/fv-preview/: Cargo.toml  README.md
crates/fv-preview/src/: lib.rs
crates/fv-publish/: Cargo.toml  README.md
crates/fv-publish/src/: lib.rs  trusted_publishing.rs
crates/fv-pypi-types/: Cargo.toml  README.md
crates/fv-pypi-types/src/: base_url.rs  conflicts.rs  dependency_groups.rs  direct_url.rs  lenient_requirement.rs  marker_environment.rs  parsed_url.rs  project_status.rs  simple_json.rs  supported_environments.rs
crates/fv-python/: Cargo.toml  README.md  build.rs  fetch-download-metadata.py
crates/fv-python/python/: get_interpreter_info.py
crates/fv-python/src/: discovery.rs  downloads.rs  environment.rs  installation.rs  interpreter.rs  lib.rs  macos_dylib.rs  managed.rs  microsoft_store.rs  prefix.rs  python_version.rs  target.rs  version_files.rs  virtualenv.rs  windows_registry.rs
crates/fv-requirements/: Cargo.toml  README.md
crates/fv-requirements-txt/: Cargo.toml  README.md
crates/fv-requirements-txt/src/: lib.rs  requirement.rs
crates/fv-requirements/src/: extras.rs  lib.rs  lookahead.rs  source_tree.rs  sources.rs  specification.rs  unnamed.rs  upgrade.rs
crates/fv-resolver/: Cargo.toml  README.md
crates/fv-resolver/src/: candidate_selector.rs  dependency_provider.rs  error.rs  exclude_newer.rs  exclusions.rs  flat_index.rs  fork_indexes.rs  fork_urls.rs  graph_ops.rs  manifest.rs  marker.rs  options.rs  pins.rs  preferences.rs  prerelease.rs  python_requirement.rs  redirect.rs  universal_marker.rs  version_map.rs  yanks.rs
(+1351 files in other folders)
