[package]
name = "fv-auth"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-cache-key = { workspace = true }
fv-fs = { workspace = true }
fv-keyring = { workspace = true, features = ["apple-native", "secret-service", "windows-native"] }
fv-once-map = { workspace = true }
fv-preview = { workspace = true }
fv-redacted = { workspace = true }
fv-small-str = { workspace = true }
fv-state = { workspace = true }
fv-static = { workspace = true }
fv-warnings = { workspace = true }

anyhow = { workspace = true }
arcstr = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
etcetera = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
http = { workspace = true }
jiff = { workspace = true }
percent-encoding = { workspace = true }
reqsign = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
rust-netrc = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
