[package]
name = "fv-bench"
version = "0.0.32"
description = "This is an internal component crate of fv"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
bench = false

[[bench]]
name = "fv"
path = "benches/fv.rs"
harness = false

[dev-dependencies]
fv-cache = { workspace = true }
fv-client = { workspace = true }
fv-configuration = { workspace = true }
fv-dispatch = { workspace = true }
fv-distribution = { workspace = true }
fv-distribution-types = { workspace = true }
fv-extract = { workspace = true }
fv-install-wheel = { workspace = true }
fv-pep440 = { workspace = true }
fv-pep508 = { workspace = true }
fv-platform-tags = { workspace = true }
fv-preview = { workspace = true }
fv-pypi-types = { workspace = true }
fv-python = { workspace = true }
fv-resolver = { workspace = true }
fv-types = { workspace = true }
fv-workspace = { workspace = true }

anyhow = { workspace = true }
criterion = { version = "4.0.3", default-features = false, package = "codspeed-criterion-compat", features = ["async_tokio"] }
jiff = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["fv-extract"]

[features]
static = ["fv-extract/static"]
