[package]
name = "fv-bin-install"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-cache = { workspace = true }
fv-client = { workspace = true }
fv-distribution-filename = { workspace = true }
fv-extract = { workspace = true }
fv-pep440 = { workspace = true }
fv-platform = { workspace = true }
fv-redacted = { workspace = true }

fs-err = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
jiff = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
