[package]
name = "fv-build"
version = "0.10.12"
description = "A Python build backend"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
fv-build-backend = { workspace = true }
fv-logging = { workspace = true }
fv-preview = { workspace = true }
fv-version = { workspace = true }
fv-static = { workspace = true }

anstream = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
