[package]
name = "fv-cli"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-auth = { workspace = true }
fv-cache = { workspace = true, features = ["clap"] }
fv-configuration = { workspace = true, features = ["clap"] }
fv-distribution-types = { workspace = true }
fv-install-wheel = { workspace = true, features = ["clap"], default-features = false }
fv-normalize = { workspace = true }
fv-pep508 = { workspace = true }
fv-preview = { workspace = true }
fv-pypi-types = { workspace = true }
fv-python = { workspace = true, features = ["clap", "schemars"]}
fv-redacted = { workspace = true }
fv-resolver = { workspace = true, features = ["clap"] }
fv-settings = { workspace = true, features = ["schemars"] }
fv-static = { workspace = true }
fv-torch = { workspace = true, features = ["clap"] }
fv-version = { workspace = true }
fv-warnings = { workspace = true }
fv-workspace = { workspace = true }

anstream = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "string"] }
clap_complete_command = { workspace = true }
serde = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
default = []
self-update = []

[build-dependencies]
fv-static = { workspace = true }
fs-err = { workspace = true }
