[package]
name = "fv-client"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-auth = { workspace = true }
fv-cache = { workspace = true }
fv-cache-key = { workspace = true }
fv-configuration = { workspace = true }
fv-distribution-filename = { workspace = true }
fv-distribution-types = { workspace = true }
fv-fs = { workspace = true, features = ["tokio"] }
fv-metadata = { workspace = true }
fv-normalize = { workspace = true }
fv-pep440 = { workspace = true }
fv-pep508 = { workspace = true }
fv-platform-tags = { workspace = true }
fv-preview = { workspace = true }
fv-pypi-types = { workspace = true }
fv-small-str = { workspace = true }
fv-redacted = { workspace = true }
fv-static = { workspace = true }
fv-torch = { workspace = true }
fv-version = { workspace = true }
fv-warnings = { workspace = true }

anyhow = { workspace = true }
astral-tl = { workspace = true }
async-trait = { workspace = true }
async_http_range_reader = { workspace = true }
async_zip = { workspace = true }
bytecheck = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
h2 = { workspace = true }
html-escape = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
jiff = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rkyv = { workspace = true }
rmp-serde = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fv-platform = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
insta = { workspace = true }
rcgen = { workspace = true }
regex = { workspace = true }
rustls = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
wiremock = { workspace = true }
