[package]
name = "fv-distribution-filename"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-cache-key = { workspace = true }
fv-normalize = { workspace = true }
fv-pep440 = { workspace = true }
fv-platform-tags = { workspace = true }
fv-small-str = { workspace = true }

memchr = { workspace = true }
rkyv = { workspace = true, features = ["smallvec-1"] }
serde = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
