[package]
name = "fv-distribution-types"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-auth = { workspace = true, features = ["schemars"] }
fv-cache-info = { workspace = true }
fv-cache-key = { workspace = true }
fv-distribution-filename = { workspace = true }
fv-fs = { workspace = true }
fv-git-types = { workspace = true }
fv-normalize = { workspace = true }
fv-pep440 = { workspace = true }
fv-pep508 = { workspace = true }
fv-install-wheel = { workspace = true }
fv-platform-tags = { workspace = true }
fv-pypi-types = { workspace = true }
fv-redacted = { workspace = true }
fv-small-str = { workspace = true }
fv-warnings = { workspace = true }

arcstr = { workspace = true }
bitflags = { workspace = true }
fs-err = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
jiff = { workspace = true }
owo-colors = { workspace = true }
percent-encoding = { workspace = true }
petgraph = { workspace = true }
rkyv = { workspace = true }
rustc-hash = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
version-ranges = { workspace = true }

[dev-dependencies]
toml = { workspace = true }

[features]
schemars = ["dep:schemars", "fv-redacted/schemars"]
