[package]
name = "fv-distribution"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-auth = { workspace = true }
fv-cache = { workspace = true }
fv-cache-info = { workspace = true }
fv-client = { workspace = true }
fv-configuration = { workspace = true }
fv-distribution-filename = { workspace = true }
fv-distribution-types = { workspace = true }
fv-extract = { workspace = true }
fv-flags = { workspace = true }
fv-fs = { workspace = true, features = ["tokio"] }
fv-git = { workspace = true }
fv-git-types = { workspace = true }
fv-metadata = { workspace = true }
fv-normalize = { workspace = true }
fv-pep440 = { workspace = true }
fv-pep508 = { workspace = true }
fv-platform-tags = { workspace = true }
fv-pypi-types = { workspace = true }
fv-redacted = { workspace = true }
fv-types = { workspace = true }
fv-warnings = { workspace = true }
fv-workspace = { workspace = true }

anyhow = { workspace = true }
either = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
nanoid = { workspace = true }
owo-colors = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
rmp-serde = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }

[features]
default = []
static = ["fv-extract/static"]
