[package]
name = "fv-extract"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-configuration = { workspace = true }
fv-distribution-filename = { workspace = true }
fv-pypi-types = { workspace = true }
fv-static = { workspace = true }
fv-warnings = { workspace = true }

astral-tokio-tar = { workspace = true }
async-compression = { workspace = true, features = ["bzip2", "gzip", "zstd", "xz"] }
async_zip = { workspace = true }
blake2 = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
md-5 = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
xz2 = { workspace = true }
zip = { workspace = true }
zstd = { workspace = true }

[features]
default = []
# Avoid a liblzma.so dependency
static = ["xz2/static"]

[package.metadata.cargo-shear]
ignored = ["xz2"]
