[package]
name = "fv-git"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-auth = { workspace = true }
fv-cache-key = { workspace = true }
fv-fs = { workspace = true, features = ["tokio"] }
fv-git-types = { workspace = true }
fv-redacted = { workspace = true }
fv-static = { workspace = true }
fv-version = { workspace = true }
fv-warnings = { workspace = true }

anyhow = { workspace = true }
cargo-util = { workspace = true }
dashmap = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
owo-colors = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
reqwest-middleware = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
