[package]
name = "fv-installer"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-cache = { workspace = true }
fv-cache-info = { workspace = true }
fv-cache-key = { workspace = true }
fv-configuration = { workspace = true }
fv-distribution = { workspace = true }
fv-distribution-filename = { workspace = true }
fv-distribution-types = { workspace = true }
fv-fs = { workspace = true }
fv-git-types = { workspace = true }
fv-install-wheel = { workspace = true, default-features = false }
fv-normalize = { workspace = true }
fv-pep440 = { workspace = true }
fv-pep508 = { workspace = true }
fv-platform-tags = { workspace = true }
fv-preview = { workspace = true }
fv-pypi-types = { workspace = true }
fv-python = { workspace = true }
fv-redacted = { workspace = true }
fv-static = { workspace = true }
fv-types = { workspace = true }
fv-warnings = { workspace = true }

anyhow = { workspace = true }
async-channel = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
owo-colors = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
same-file = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
anstream = { workspace = true }
insta = { workspace = true }
