[package]
name = "fv-metadata"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[dependencies]
fv-distribution-filename = { workspace = true }
fv-normalize = { workspace = true }
fv-pypi-types = { workspace = true }

async_zip = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }

[lints]
workspace = true
