[package]
name = "fv-preview"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["fv-preview"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-warnings = { workspace = true }

enumflags2 = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
fv-preview = { path = ".", features = ["testing"] }

[features]
default = []
testing = []
