[package]
name = "fv-publish"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[dependencies]
fv-auth = { workspace = true }
fv-cache = { workspace = true }
fv-client = { workspace = true }
fv-configuration = { workspace = true }
fv-distribution-filename = { workspace = true }
fv-distribution-types = { workspace = true }
fv-extract = { workspace = true }
fv-fs = { workspace = true }
fv-metadata = { workspace = true }
fv-pypi-types = { workspace = true }
fv-redacted = { workspace = true }
fv-static = { workspace = true }
fv-warnings = { workspace = true }

ambient-id = { workspace = true }
astral-tokio-tar = { workspace = true }
async-compression = { workspace = true }
base64 = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
itertools = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true, features = ["json"] }
reqwest-retry = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true }

[dev-dependencies]
anstream = { workspace = true }
insta = { workspace = true }
fastrand = { workspace = true }

[features]
# Test only feature to enable non-HTTPS URL handling
# in unit tests.
test = []

[lints]
workspace = true
