[package]
name = "fv-python"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-cache = { workspace = true }
fv-cache-info = { workspace = true }
fv-cache-key = { workspace = true }
fv-client = { workspace = true }
fv-dirs = { workspace = true }
fv-distribution-filename = { workspace = true }
fv-distribution-types = { workspace = true }
fv-extract = { workspace = true }
fv-fs = { workspace = true }
fv-install-wheel = { workspace = true }
fv-pep440 = { workspace = true }
fv-pep508 = { workspace = true }
fv-platform = { workspace = true }
fv-platform-tags = { workspace = true }
fv-preview = { workspace = true }
fv-pypi-types = { workspace = true }
fv-redacted = { workspace = true }
fv-state = { workspace = true }
fv-static = { workspace = true }
fv-trampoline-builder = { workspace = true }
fv-warnings = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, optional = true }
configparser = { workspace = true }
dunce = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
owo-colors = { workspace = true }
ref-cast = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rmp-serde = { workspace = true }
rustc-hash = { workspace = true }
same-file = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
url = { workspace = true }
which = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
junction = { workspace = true }
windows-registry = { workspace = true }
windows = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_fs = { workspace = true }
indoc = { workspace = true }
insta = { workspace = true }
itertools = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }

[build-dependencies]
fv-static = { workspace = true }

serde_json = { workspace = true }
zstd = { workspace = true }
