[package]
name = "fv-requirements-txt"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-client = { workspace = true }
fv-configuration = { workspace = true }
fv-distribution-types = { workspace = true }
fv-fs = { workspace = true }
fv-normalize = { workspace = true }
fv-pep508 = { workspace = true }
fv-pypi-types = { workspace = true }
fv-redacted = { workspace = true }
fv-warnings = { workspace = true }

fs-err = { workspace = true }
memchr = { workspace = true }
reqwest = { workspace = true, optional = true }
reqwest-middleware = { workspace = true, optional = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unscanny = { workspace = true }
url = { workspace = true }

[features]
http = ["reqwest", "reqwest-middleware"]

[dev-dependencies]
anyhow = { workspace = true }
assert_fs = { workspace = true }
indoc = { workspace = true }
insta = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true }
