[package]
name = "fv-requirements"
version = "0.0.32"
description = "This is an internal component crate of fv"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fv-cache-key = { workspace = true }
fv-client = { workspace = true }
fv-configuration = { workspace = true }
fv-console = { workspace = true }
fv-distribution = { workspace = true }
fv-distribution-filename = { workspace = true }
fv-distribution-types = { workspace = true }
fv-fs = { workspace = true }
fv-git = { workspace = true }
fv-normalize = { workspace = true }
fv-pep508 = { workspace = true }
fv-pypi-types = { workspace = true }
fv-redacted = { workspace = true }
fv-requirements-txt = { workspace = true, features = ["http"] }
fv-resolver = { workspace = true, features = ["clap"] }
fv-scripts = { workspace = true }
fv-types = { workspace = true }
fv-warnings = { workspace = true }

anyhow = { workspace = true }
configparser = { workspace = true }
console = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
